<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/stewie_suicide"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:text="@string/greeting"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/colorWhite"
        android:textColor="@android:color/white">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginLeft="-100dp"
            android:layout_marginTop="-70dp"
            android:textColor="@color/colorBlack"
            android:layout_marginBottom="40dp"/>


        <EditText
            android:textColorHint="@color/colorBlack"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            />
        <EditText
            android:textColorHint="@color/colorBlack"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"

            />
        <EditText
            android:textColorHint="@color/colorBlack"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
        />
        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>